--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,189 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<ScrollView
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:scrollbars="none">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
 
-        android:id="@+id/overview_no_classes_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:visibility="gone">
+        android:orientation="vertical">
 
-        <TextView
+        <android.support.v7.widget.CardView
 
-            android:layout_width="wrap_content"
+            android:id="@+id/overview_no_classes_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="No classes to show."
-            android:textSize="15sp" />
+            android:visibility="gone">
 
-    </android.support.v7.widget.CardView>
+            <TextView
 
-    <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="No classes to show."
+                android:textSize="15sp" />
 
-        android:id="@+id/overview_current_class_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        </android.support.v7.widget.CardView>
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
 
-            android:id="@+id/overview_current_class_card_info"
+            android:id="@+id/overview_current_class_card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
 
             <RelativeLayout
 
-                android:id="@+id/overview_current_class_card_header"
+                android:id="@+id/overview_current_class_card_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp">
+                android:layout_height="wrap_content">
 
-                <TextView
+                <RelativeLayout
 
-                    android:id="@+id/overview_current_class_card_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textSize="18sp" />
-
-                <TextView
-
-                    android:id="@+id/overview_current_class_card_location_teacher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/overview_current_class_card_title"
-                    android:textSize="14sp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/overview_current_class_card_header"
-                android:layout_marginBottom="12dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="4dp">
-
-                <ProgressBar
-
-                    android:id="@+id/overview_current_class_card_progress_bar"
-                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
+                    android:id="@+id/overview_current_class_card_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:progressTint="@color/primary">
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp">
 
-                </ProgressBar>
+                    <TextView
 
-                <TextView
+                        android:id="@+id/overview_current_class_card_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="18sp" />
 
-                    android:id="@+id/overview_current_class_card_start_time"
-                    android:layout_width="wrap_content"
+                    <TextView
+
+                        android:id="@+id/overview_current_class_card_location_teacher"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/overview_current_class_card_title"
+                        android:textSize="14sp" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/overview_current_class_card_progress_bar"
-                    android:textSize="14sp" />
+                    android:layout_below="@id/overview_current_class_card_header"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="4dp">
 
-                <TextView
+                    <ProgressBar
 
-                    android:id="@+id/overview_current_class_card_end_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@id/overview_current_class_card_progress_bar"
-                    android:textSize="14sp" />
+                        android:id="@+id/overview_current_class_card_progress_bar"
+                        style="@android:style/Widget.Material.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:progressTint="@color/primary">
 
-                <TextView
+                    </ProgressBar>
 
-                    android:id="@+id/overview_current_class_card_progress_percentage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/overview_current_class_card_progress_bar"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="14sp" />
+                    <TextView
+
+                        android:id="@+id/overview_current_class_card_start_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/overview_current_class_card_progress_bar"
+                        android:textSize="14sp" />
+
+                    <TextView
+
+                        android:id="@+id/overview_current_class_card_end_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@id/overview_current_class_card_progress_bar"
+                        android:textSize="14sp" />
+
+                    <TextView
+
+                        android:id="@+id/overview_current_class_card_progress_percentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/overview_current_class_card_progress_bar"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="14sp" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
-        </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
 
-    <android.support.v7.widget.CardView
-
-        android:id="@+id/overview_next_classes_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/overview_current_class_card"
-        android:layout_margin="16dp">
-
-        <RelativeLayout
-
+            android:id="@+id/overview_next_classes_card"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="8dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/overview_current_class_card"
+            android:layout_margin="16dp">
 
-            <ExpandableListView
+            <RelativeLayout
 
-                android:id="@+id/overview_next_classes_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:childDivider="#d3d3d3"
-                android:dividerHeight="1dp"
-                android:layoutDirection="rtl"
-                android:scrollbars="none">
+                android:layout_height="36dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="8dp">
 
-            </ExpandableListView>
+                <ExpandableListView
 
-        </RelativeLayout>
+                    android:id="@+id/overview_next_classes_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
+                    android:childDivider="#d3d3d3"
+                    android:dividerHeight="1dp"
+                    android:layoutDirection="rtl"
+                    android:scrollbars="none">
 
-    </android.support.v7.widget.CardView>
+                </ExpandableListView>
 
-    <android.support.v7.widget.CardView
+            </RelativeLayout>
 
-        android:id="@+id/overview_tomorrow_classes_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/overview_next_classes_card"
-        android:layout_margin="16dp">
+        </android.support.v7.widget.CardView>
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
 
+            android:id="@+id/overview_tomorrow_classes_card"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="8dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/overview_next_classes_card"
+            android:layout_margin="16dp">
 
-            <ExpandableListView
+            <RelativeLayout
 
-                android:id="@+id/overview_tomorrow_classes_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:childDivider="#d3d3d3"
-                android:dividerHeight="1dp"
-                android:layoutDirection="rtl"
-                android:scrollbars="none">
+                android:layout_height="36dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="8dp">
 
-            </ExpandableListView>
+                <ExpandableListView
 
-        </RelativeLayout>
+                    android:id="@+id/overview_tomorrow_classes_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
+                    android:childDivider="#d3d3d3"
+                    android:dividerHeight="1dp"
+                    android:layoutDirection="rtl"
+                    android:scrollbars="none">
 
-    </android.support.v7.widget.CardView>
+                </ExpandableListView>
 
-</RelativeLayout>
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
+
+</ScrollView>
